--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page Simples</title>
+    <title>Nortistaz - Midiakit</title>
     <style>
         /* Reset e estilos gerais */
         * {
@@ -14,213 +14,205 @@
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #fff;
+            background-color: #000;
+        }
+        a {
+            text-decoration: none;
+            color: inherit;
         }
         /* Header */
         header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 1rem 0;
             position: fixed;
             width: 100%;
             top: 0;
+            left: 0;
+            background-color: #000;
+            padding: 20px 0;
             z-index: 1000;
         }
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        nav {
+        header .container {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 0 20px;
         }
-        .logo {
-            font-size: 1.5rem;
+        header .logo {
+            font-size: 1.8rem;
             font-weight: bold;
+            color: #fff;
         }
-        .nav-links {
-            display: flex;
+        header nav ul {
             list-style: none;
-            gap: 2rem;
+            display: flex;
+            gap: 20px;
         }
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        .nav-links a:hover {
-            color: #f0f0f0;
+        header nav ul li a {
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 500;
         }
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 120px 0 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: url('hero-image.jpg') no-repeat center center/cover;
             text-align: center;
+            color: #fff;
         }
         .hero h1 {
             font-size: 3rem;
-            margin-bottom: 1rem;
+            margin-bottom: 20px;
         }
         .hero p {
             font-size: 1.2rem;
-            margin-bottom: 2rem;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
+            margin-bottom: 30px;
         }
-        .btn {
-            display: inline-block;
-            background: #ff6b6b;
-            color: white;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-        .btn:hover {
-            background: #ff5252;
-        }
-        /* Features Section */
-        .features {
-            padding: 80px 0;
-            background: #f8f9fa;
-        }
-        .section-title {
+        /* Sobre */
+        .sobre {
+            padding: 50px 20px;
+            background-color: #111;
             text-align: center;
-            margin-bottom: 3rem;
         }
-        .section-title h2 {
+        .sobre h2 {
             font-size: 2.5rem;
-            color: #333;
+            margin-bottom: 20px;
         }
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-        .feature-card {
-            background: white;
-            padding: 2rem;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-        .feature-card:hover {
-            transform: translateY(-5px);
-        }
-        .feature-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-        /* CTA Section */
-        .cta {
-            background: #333;
-            color: white;
-            padding: 80px 0;
-            text-align: center;
-        }
-        .cta h2 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-        .cta p {
+        .sobre p {
             font-size: 1.2rem;
-            margin-bottom: 2rem;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
+            margin-bottom: 20px;
+        }
+        /* Nossos Números */
+        .numeros {
+            display: flex;
+            justify-content: space-around;
+            padding: 50px 20px;
+            background-color: #222;
+        }
+        .numeros div {
+            text-align: center;
+        }
+        .numeros div h3 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+        .numeros div p {
+            font-size: 1.2rem;
+        }
+        /* Identidade Visual */
+        .identidade {
+            padding: 50px 20px;
+            background-color: #111;
+            text-align: center;
+        }
+        .identidade h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .identidade .cores {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        .identidade .cores div {
+            width: 100px;
+            height: 100px;
+        }
+        /* Contato */
+        .contato {
+            padding: 50px 20px;
+            background-color: #222;
+            text-align: center;
+        }
+        .contato h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .contato p {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
         }
         /* Footer */
         footer {
-            background: #222;
-            color: white;
-            padding: 2rem 0;
+            padding: 20px;
+            background-color: #111;
             text-align: center;
+            color: #fff;
         }
         /* Responsividade */
         @media (max-width: 768px) {
-            .nav-links {
-                display: none;
+            .numeros {
+                flex-direction: column;
+                align-items: center;
             }
-            .hero h1 {
-                font-size: 2rem;
-            }
-            .hero p {
-                font-size: 1rem;
-            }
-            .section-title h2 {
-                font-size: 2rem;
+            .numeros div {
+                margin-bottom: 20px;
             }
         }
     </style>
 </head>
 <body>
-    
-    <!-- Header -->
     <header>
         <div class="container">
+            <div class="logo">Nortistaz</div>
             <nav>
-                <div class="logo">MinhaMarca</div>
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#features">Recursos</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                <ul>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#numeros">Nossos Números</a></li>
+                    <li><a href="#identidade">Identidade Visual</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="container">
-            <h1>Transforme seu negócio hoje</h1>
-            <p>Soluções inovadoras para impulsionar seu crescimento e alcançar resultados extraordinários.</p>
-            <a href="#contact" class="btn">Começar Agora</a>
+
+    <section class="hero">
+        <div>
+            <h1>A Voz da Geração Z na Amazônia</h1>
+            <p>Conectando cultura, entretenimento e informação com autenticidade e estilo.</p>
         </div>
     </section>
-    <!-- Features Section -->
-    <section class="features" id="features">
-        <div class="container">
-            <div class="section-title">
-                <h2>Nossos Recursos</h2>
-            </div>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">🚀</div>
-                    <h3>Performance</h3>
-                    <p>Alta performance e velocidade para seus projetos com tecnologia de ponta.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🔒</div>
-                    <h3>Segurança</h3>
-                    <p>Proteção máxima para seus dados com os mais altos padrões de segurança.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Eficiência</h3>
-                    <p>Processos otimizados que aumentam a produtividade e reduzem custos.</p>
-                </div>
-            </div>
+
+    <section id="sobre" class="sobre">
+        <h2>Sobre a Nortistaz</h2>
+        <p>Fundada em 29 de março de 2021 por adolescentes de 16 a 17 anos, a Nortistaz se tornou a maior editora da Geração Z na Amazônia. Com uma abordagem autêntica e inovadora, conectamos a juventude nortista com conteúdo relevante e engajador.</p>
+    </section>
+
+    <section id="numeros" class="numeros">
+        <div>
+            <h3>371K</h3>
+            <p>Seguidores no Instagram</p>
+        </div>
+        <div>
+            <h3>1.761</h3>
+            <p>Posts realizados</p>
+        </div>
+        <div>
+            <h3>2021</h3>
+            <p>Ano de fundação</p>
         </div>
     </section>
-    <!-- CTA Section -->
-    <section class="cta" id="contact">
-        <div class="container">
-            <h2>Pronto para começar?</h2>
-            <p>Junte-se a milhares de clientes satisfeitos e transforme seu negócio agora mesmo.</p>
-            <a href="#" class="btn">Experimente Grátis</a>
+
+    <section id="identidade" class="identidade">
+        <h2>Identidade Visual</h2>
+        <div class="cores">
+            <div style="background-color: #000;"></div>
+            <div style="background-color: #fff;"></div>
+            <div style="background-color: #555;"></div>
         </div>
     </section>
-    <!-- Footer -->
+
+    <section id="contato" class="contato">
+        <h2>Contato</h2>
+        <p>Para parcerias, colaborações ou mais informações, entre em contato conosco:</p>
+        <p>Email: contato@nortistaz.com.br</p>
+        <p>Instagram: <a href="https://www.instagram.com/nortistaz/" target="_blank">@nortistaz</a></p>
+    </section>
+
     <footer>
-        <div class="container">
-            <p>&copy; 2024 MinhaMarca. Todos os direitos reservados.</p>
-        </div>
+        <p>&copy; 2025 Nortistaz. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
